syntax = "proto3";

import "proto/models.proto";

option go_package = "github.com/hive-ops/apiary/pb";

service ApiaryService {
  rpc GetEntries(GetEntriesCommand) returns (GetEntriesResponse) {}
  rpc SetEntries(SetEntriesCommand) returns (SetEntriesResponse) {}
  rpc DeleteEntries(DeleteEntriesCommand) returns (DeleteEntriesResponse) {}
}
